# meteorological-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
meteorological_api/: main.py
meteorological_api/services/: file_reader.py
meteorological_api/tests/: test_api.py  test_file_reader.py
