[tool.poetry]
name = "meteorological-api"
version = "0.1.0"
description = ""
authors = ["Vladislav.pavlov <Vladislav.pavlov@virtuozzo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.1"}
uvicorn = "^0.30.6"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
